--- a/tuhuan.css
+++ b/tuhuan.css
@@ -240,7 +240,7 @@ h3 {
 }
 
 .fifth {
-    background-image: url(./img/about-yuanjing.jpg);
+    background-image: url('./img/about-yuanjing.jpg');
     width: 100%;
     height: 420px;
 }
@@ -255,9 +255,44 @@ h3 {
 }
 
 .fifth > .container {
-    margin: 105px 0 0;
+    /* margin: 105px 0 0; */
+    /* width: 1170px; */
+}
+
+.container{
+    width: 1170px;
+    height: 323.8px;
+    margin: 0 -15px;
 }
 
 .container-pic {
-    
+    background-image: url('./img/logo.svg');
+    margin: 0 535px;
+    width: 99px;
+    height: 99px;
+}
+
+.container-text p {
+    margin: 0;
+}
+
+.p-1 {
+    padding: 34.7px 0 4px;
+    text-align: center;
+}
+
+.p-2 {
+    padding: 0 0 7px;
+}
+
+.sixth-footer {
+    width: 100%;
+    height: 139.72px;
+    background-color: #333;
+}
+
+.copyright {
+    font-size: 12px;
+    color: rgba(102,102,102,.8);
+    font-style: normal;
 }
